--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
